old version: to be reconstructed

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8"/>
+<meta charset="utf-8" http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/>
+<!--    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">-->
+    <link rel="stylesheet"  href="https://cdnjs.cloudflare.com/ajax/libs/react-datepicker/2.14.1/react-datepicker.min.css" />
 <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
